--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -1,1 +1,120 @@
-!pip freeze -q | head -n 120
+absl-py==1.4.0
+accelerate==1.9.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+alabaster==1.0.0
+albucore==0.0.24
+albumentations==2.0.8
+ale-py==0.11.2
+altair==5.5.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
+array_record==0.7.2
+arviz==0.22.0
+astropy==7.1.0
+astropy-iers-data==0.2025.7.21.0.41.39
+astunparse==1.6.3
+atpublic==5.1
+attrs==25.3.0
+audioread==3.0.1
+autograd==1.8.0
+babel==2.17.0
+backcall==0.2.0
+backports.tarfile==1.2.0
+beautifulsoup4==4.13.4
+betterproto==2.0.0b6
+bigframes==2.11.0
+bigquery-magics==0.10.1
+bleach==6.2.0
+blinker==1.9.0
+blis==1.3.0
+blobfile==3.0.0
+blosc2==3.6.1
+bokeh==3.7.3
+Bottleneck==1.4.2
+bqplot==0.12.45
+branca==0.8.1
+Brotli==1.1.0
+build==1.2.2.post1
+CacheControl==0.14.3
+cachetools==5.5.2
+catalogue==2.0.10
+certifi==2025.7.14
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+chex==0.1.90
+clarabel==0.11.1
+click==8.2.1
+cloudpathlib==0.21.1
+cloudpickle==3.1.1
+cmake==3.31.6
+cmdstanpy==1.2.5
+colorcet==3.1.0
+colorlover==0.3.0
+colour==0.1.5
+community==1.0.0b1
+confection==0.1.5
+cons==0.4.7
+contourpy==1.3.2
+cramjam==2.10.0
+cryptography==43.0.3
+cuda-python==12.6.2.post1
+cudf-cu12 @ https://pypi.nvidia.com/cudf-cu12/cudf_cu12-25.6.0-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
+cudf-polars-cu12==25.6.0
+cufflinks==0.17.3
+cuml-cu12==25.6.0
+cupy-cuda12x==13.3.0
+curl_cffi==0.12.0
+cuvs-cu12==25.6.1
+cvxopt==1.3.2
+cvxpy==1.6.7
+cycler==0.12.1
+cyipopt==1.5.0
+cymem==2.0.11
+Cython==3.0.12
+dask==2025.5.0
+dask-cuda==25.6.0
+dask-cudf-cu12==25.6.0
+dataproc-spark-connect==0.8.3
+datasets==4.0.0
+db-dtypes==1.4.3
+dbus-python==1.2.18
+debugpy==1.8.15
+decorator==4.4.2
+defusedxml==0.7.1
+diffusers==0.34.0
+dill==0.3.8
+distributed==2025.5.0
+distributed-ucxx-cu12==0.44.0
+distro==1.9.0
+dlib==19.24.6
+dm-tree==0.1.9
+docstring_parser==0.17.0
+docutils==0.21.2
+dopamine_rl==4.1.2
+duckdb==1.3.2
+earthengine-api==1.5.24
+easydict==1.13
+editdistance==0.8.1
+eerepr==0.1.2
+einops==0.8.1
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+entrypoints==0.4
+et_xmlfile==2.0.0
+etils==1.13.0
+etuples==0.3.10
+Farama-Notifications==0.0.4
+fastai==2.7.19
+fastapi==0.116.1
+fastcore==1.7.29
+fastdownload==0.0.7
+fastjsonschema==2.21.1
+fastprogress==1.0.3
+fastrlock==0.8.3
+ffmpy==0.6.1
